argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`argocd.home.diceninjagaming.com`)"
      priority: 10
      services:
        - name: argocd-server
    - kind: Rule
      match: "Host(`argocd.home.diceninjagaming.com`) && Header(`Content-Type`, `application/grpc`)"
      priority: 12
      services:
        - name: argocd-server
          scheme: h2c
    - kind: Rule
      match: "Host(`argocd.local`)"
      priority: 11
      services:
        - name: argocd-server
    - kind: Rule
      match: "Host(`argocd.local`)  && Header(`Content-Type`, `application/grpc`)"
      priority: 13
      services:
        - name: argocd-server
          scheme: h2c
  services:
    - name: argocd-server
      port: 
        number: 80
      kind: Service
      namespace: argocd
